--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "civet-orm",
-  "version": "0.0.1",
+  "version": "1.0.2",
   "description": "An extremely simple in-memory data store that exposes a Mongoose-like API.",
   "main": "civet.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dean Tambling <dean@tambling.me> (http://tambling.me)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tambling/civet.git"
+  },
   "license": "MIT"
 }
